# basic-chat

./: .coverage.souriya.local.37217.XXjwinDx  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  BUGS.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  CLEANUP_SUMMARY.md  Dockerfile  Dockerfile.base  LICENSE  Makefile  PR_UI_IMPROVEMENTS.md  README.md  REASONING_FEATURES.md  STARTUP_GUIDE.md  TEST_STATUS.md  app.py  basicchat.env  basicchat.service  build.sh  celery_config.py  chat_sessions.db  ci_full_log.txt  com.basicchat.startup.plist  conda.yaml  config.py  database_migrations.py  docker-compose.yml  document_processor.py  generic-tool-prompt.txt  last_ci_log.txt  launch_basicchat.sh  llm_judge_action_items.md  llm_judge_improvement_tips.md  llm_judge_results.json  main.py  ollama_api.py  package.json  (+27 more)
.github/: pull_request_template.md
.github/workflows/: basic-test.yml  ci.yml  e2e-smoke.yml  os-smoke-test.yml  python-package.yml  release.yml  test.yml  verify.yml
backend/: main.py  start.sh
basicchat/: __init__.py
basicchat/core/: __init__.py  app.py  config.py  reasoning_engine.py
basicchat/evaluation/: __init__.py  ai_validator.py  response_evaluator.py
basicchat/evaluation/evaluators/: check_llm_judge.py  check_llm_judge_github.py  check_llm_judge_huggingface.py  check_llm_judge_openai.py  check_llm_judge_smart.py  consistency.py  llm_judge_rules.json
basicchat/services/: __init__.py  document_processor.py
basicchat/tasks/: __init__.py  task_manager.py  task_ui.py  tasks.py
basicchat/ui/: __init__.py
basicchat/utils/: __init__.py  async_ollama.py  caching.py  chat_db.py
chroma_db_52b63186/: chroma.sqlite3
chroma_db_69483d96/: chroma.sqlite3
chroma_db_cb9d8b52/: chroma.sqlite3
config/: pytest.ini
docs/: ARCHITECTURE.md  CI_BUILD.md  CI_OPTIMIZATION.md  DEVELOPMENT.md  DOCUMENTATION.md  EVALUATORS.md  FEATURES.md  FINE_TUNING_INTEGRATION.md  GITHUB_MODELS_INTEGRATION.md  GITHUB_MODELS_TROUBLESHOOTING.md  INSTALLATION.md  LLM_JUDGE_FLOW.md  LLM_JUDGE_IMPROVEMENTS.md  LOCAL_LLM_JUDGE.md  MCP_SERVER_INTEGRATION.md  PROMPT_ENGINEERING_ANALYSIS.md  REASONING_ENGINE.md  REASONING_FEATURES.md  RELEASE_NOTES.md  RESPONSE_EVALUATION.md  ROADMAP.md  STATIC_ANALYSIS.md  TECHNICAL_OVERVIEW.md  TESTING.md  TESTING_STRATEGY.md
evaluators/: README.md  check_llm_judge.py  check_llm_judge_github.py  check_llm_judge_huggingface.py  check_llm_judge_openai.py  consistency.py  evaluator.config.json
examples/: response_evaluation_example.py
frontend/: package-lock.json
migrations/: V1.0.0__Initial_session_schema.sql
rag-chatbot/core/: document_engine.py  rag_engine.py  vector_engine.py
rag-chatbot/services/: cache_service.py  state_service.py
rag_chatbot/core/: document_engine.py  rag_engine.py  vector_engine.py
rag_chatbot/services/: __init__.py  cache_service.py  state_service.py
scripts/: categorize_tests.py  cleanup_chroma.py  discover_github_models.py  e2e_health_check.py  e2e_local.sh  fix_ci.sh  generate_assets.py  generate_final_report.py  generate_llm_judge_report.py  generate_release_notes.py  generate_test_assets.py  lint.py  llm-judge  production_health_check.py  release.sh  run_llm_judge.sh  run_tests.py  run_tests.sh  setup_local_llm_judge.sh  start-basicchat.sh  start_app.sh  test_github_models.py  test_llm_judge.py  test_openai_evaluation.py  test_performance_regression.py  test_quick_evaluation.py
test-results/.playwright-artifacts-10/: 765470e4-0a1d-4bee-99f8-276b24069dc8.webm
test-results/.playwright-artifacts-11/: 303750f3-a419-4cb2-966f-9017a26bdd16.webm
test-results/.playwright-artifacts-8/: 2309e467-d816-4397-9da4-6aed1a128cc5.webm
test-results/.playwright-artifacts-9/: 1e717ffb-9378-400c-bafa-0219ac4361c5.webm
test-results/accessibility-Accessibility-should-meet-WCAG-standards-chromium/: video.webm
test-results/accessibility-Accessibility-should-meet-WCAG-standards-firefox/: video.webm
test-results/chat-Chat-Interface-should-display-chat-interface-chromium/: video.webm
test-results/chat-Chat-Interface-should-display-chat-interface-firefox/: video.webm
test-results/chat-Chat-Interface-should-handle-reasoning-modes-chromium/: video.webm
test-results/chat-Chat-Interface-should-send-and-receive-messages-chromium/: error-context.md  video.webm
test-results/file-upload-File-Upload-should-handle-invalid-file-types-chromium/: video.webm
test-results/file-upload-File-Upload-should-upload-PDF-file-chromium/: video.webm
test_results/: all_tests_output.txt  all_tests_results.xml  calculator_test_results.txt  calculator_test_summary.md  comprehensive_test_summary.md  test_results.xml  test_results_latest.md
tests/: conftest.py  test_app.py  test_audio.py  test_basic.py  test_cache_utils.py  test_core.py  test_database_migrations.py  test_deep_research_full.py  test_deep_research_simple.py  test_document_processing.py  test_document_workflow.py  test_documents.py  test_enhanced_audio.py  test_enhanced_reasoning.py  test_enhanced_tools.py  test_image_processing.py  test_llm_judge.py  test_processing.py  test_reasoning.py  test_response_evaluator.py  test_session_manager.py  test_task_manager.py  test_tasks.py  test_tools.py  test_ui_integration.py  test_ui_styling.py  test_upload.py  test_voice.py  test_web_search.py
tests/data/: test_sample.txt
tests/e2e/fixtures/: invalid.txt
tests/e2e/helpers/: chat-helpers.ts
tests/e2e/specs/: accessibility.spec.ts  basic-e2e.spec.ts  chat.spec.ts  comprehensive-chat.spec.ts  file-upload.spec.ts  smoke.spec.ts  ui-ux.spec.ts
tests/integration/: test_document_processing.py  test_documents_integration.py  test_reasoning_integration.py  test_response_evaluation_integration.py  test_task_manager_integration.py  test_upload_integration.py  test_voice.py  test_web_search_integration.py
tickets/: 001-speculative-decoding.md
utils/: __init__.py  async_ollama.py  caching.py  enhanced_tools.py  wait_for_workers.py
